PMD reports all pass